[package]
name = "auth-rs"
description = "Authorization and authentication service"
version = "0.2.2"
edition = "2021"
rust-version = "1.74.1"
authors = ["CodeDead <admin@codedead.com> and Utishnik"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://codedead.com/"
keywords = ["api", "authorization", "authentication", "auth"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.5"
actix-web-grants = "4.0.3"
mongodb = { version = "2.7.1", features = ["bson-chrono-0_4"] }
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.29"
dotenvy = "0.15.7"
argon2 = "0.5.2"
regex = "1.10.2"
jsonwebtoken = "8.3.0"
env_logger = "0.10.1"
log = "0.4.20"
utoipa = "4.1.0"
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
bytes = "1.11.0"
async-smtp = {path = "src/async_smtp"}
native-tls = "0.2.14"

[profile.release]
opt-level = "z"           
lto = true                # полная LTO
codegen-units = 1         # максимум оптимизации
strip = "symbols"         # удаляет все символы
panic = "abort"           # вместо unwinding
# Убираем отладочную информацию
debug = false
debug-assertions = false

[profile.dev]
opt-level = "s"      # мега оптимизация по размеру
lto = true           # link-time optimization
codegen-units = 16

[workspace]
members = [
    "src/async_smtp",
]

[profile.minimal]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false

[profile.blazing]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false